--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__item">
+                            <li class="menu__item menu__item--active">
                                 <a href="https://volodmen.github.io/project2/main.html" class="menu__link">Главная</a>
                             </li>
                             <li class="menu__item">
@@ -259,7 +259,7 @@
                         </div>
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="https://volodmen.github.io/project2/main.html" class="menu__link">Главная</a>
                                 </li>
                                 <li class="menu__item">
