--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
                                 <li class="menu__item">
                                     <a href="https://volodmen.github.io/project2/main.html" class="menu__link">Главная</a>
                                 </li>
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="https://volodmen.github.io/project2/services.html" class="menu__link">Услуги</a>
                                 </li>
                                 <li class="menu__item">
@@ -210,7 +210,7 @@
                             <li class="menu__item">
                                 <a href="https://volodmen.github.io/project2/main.html" class="menu__link">Главная</a>
                             </li>
-                            <li class="menu__item">
+                            <li class="menu__item menu__item--active">
                                 <a href="https://volodmen.github.io/project2/sevices.html" class="menu__link">Услуги</a>
                             </li>
                             <li class="menu__item">
