--- a/reviews.html
+++ b/reviews.html
@@ -34,7 +34,7 @@
                                 <li class="menu__item">
                                     <a href="https://volodmen.github.io/project2/services.html" class="menu__link">Услуги</a>
                                 </li>
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="https://volodmen.github.io/project2/reviews.html" class="menu__link">Отзывы</a>
                                 </li>
                             </ul>
@@ -314,7 +314,7 @@
                                 <li class="menu__item">
                                     <a href="https://volodmen.github.io/project2/services.html" class="menu__link">Услуги</a>
                                 </li>
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="https://volodmen.github.io/project2/reviews.html" class="menu__link">Отзывы</a>
                                 </li>
                             </ul>
